Ajout de l'icon eye et eye-off sur le champ joueur 1

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
           <br />
           <label>
             <input type="password" id="input-G1" />
-            <!-- <div class="password-icon">
-              <i class="fa-solid fa-eye" style="color: #1e3756"></i>
-              <i class="fa-solid fa-eye-slash" style="color: #1e3756"></i>
-            </div> -->
+            <div class="password-icon">
+              <i class="fa-solid fa-eye"></i>
+              <i class="fa-solid fa-eye-slash"></i>
+            </div>
           </label>
           <div class="btn-G1">
             <button class="btn-generate-word">MOT ALEATOIRE</button>
