Ajout des pop up win et loose

--- a/index.html
+++ b/index.html
@@ -3,13 +3,18 @@
   <head>
     <meta charset="utf-8" />
     <title>Le jeu du pendu</title>
+
+    <link
+      rel="stylesheet"
+      href="./node_modules/sweetalert2/dist/sweetalert2.min.css"
+    />
     <link rel="stylesheet" href="./styles/reset.css" />
     <link rel="stylesheet" href="./styles/index.css" />
+    <link rel="stylesheet" href="./styles/override.css" />
     <link
       rel="stylesheet"
       href="./node_modules/@fortawesome/fontawesome-free/css/all.min.css"
     />
-
     <link
       rel="stylesheet"
       href="https://fonts.google.com/specimen/Barlow+Semi+Condensed"
@@ -75,6 +80,7 @@
       <p>Copyright - Audrey BAUFAYS 2024</p>
       <button>REGLES</button>
     </footer>
+    <script src="./node_modules/sweetalert2/dist/sweetalert2.min.js"></script>
     <script type="module" src="./scripts/init.js"></script>
   </body>
 </html>
