Ajout des images du pendu pour chaque perte de vies

--- a/index.html
+++ b/index.html
@@ -66,18 +66,53 @@
         </div>
         <div class="content-game-G2">
           <div class="img-pendu">
-            <img class="img-body-1" src="images/img-pendu-1.png" />
-            <img class="img-body-2" src="images/img-pendu-2.png" />
-            <img class="img-body-3" src="images/img-pendu-3.png" />
-            <img class="img-body-4" src="images/img-pendu-4.png" />
-            <img class="img-body-5" src="images/img-pendu-5.png" />
-            <img class="img-body-6" src="images/img-pendu-6.png" />
-            <img class="img-body-7" src="images/img-pendu-7.png" />
-            <img class="img-body-8" src="images/img-pendu-8.png" />
-            <img class="img-body-9" src="images/img-pendu-9.png" />
-            <img class="img-body-10" src="images/img-pendu-10.png" />
-            <img class="img-body-11" src="images/img-pendu-11.png" />
+            <img
+              class="img-body img-body-1 content-hidden"
+              src="images/img-pendu-1.png"
+            />
+            <img
+              class="img-body img-body-2 content-hidden"
+              src="images/img-pendu-2.png"
+            />
+            <img
+              class="img-body img-body-3 content-hidden"
+              src="images/img-pendu-3.png"
+            />
+            <img
+              class="img-body img-body-4 content-hidden"
+              src="images/img-pendu-4.png"
+            />
+            <img
+              class="img-body img-body-5 content-hidden"
+              src="images/img-pendu-5.png"
+            />
+            <img
+              class="img-body img-body-6 content-hidden"
+              src="images/img-pendu-6.png"
+            />
+
+            <img
+              class="img-body img-body-7 content-hidden"
+              src="images/img-pendu-7.png"
+            />
+            <img
+              class="img-body img-body-8 content-hidden"
+              src="images/img-pendu-8.png"
+            />
+            <img
+              class="img-body img-body-9 content-hidden"
+              src="images/img-pendu-9.png"
+            />
+            <img
+              class="img-body img-body-10 content-hidden"
+              src="images/img-pendu-10.png"
+            />
+            <img
+              class="img-body img-body-11 content-hidden"
+              src="images/img-pendu-11.png"
+            />
           </div>
+
           <div class="content-game content-hidden">
             <h3>JOUEUR 2</h3>
             <div class="error-message-G2"><p></p></div>
